<resources>
    <string name="app_name">Nature</string>
    <string name="image">Image thumbnail</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="home_body">It\'s a pleasure nareshandselvi@gmail.com to welcome you to a world where Wellness is for everyone. No matter which state or stage of life you are in - right from ‘pre-conception’ to old age – you can always begin to be \‘well\’. Leveraging on the rich experience that he has gained over the years, Dr. Jayesh V Sanghvi MD (Hom) and his team now offer you a series of signature treatments under the label "Effortless Wellness". The uniqueness of the program is its simplicity and effectiveness with hardly any effort from your end. The result is highly profound and leaves a long lasting impression in your life.
</string>
    <string name="home_body1">This program not only treats your body but even the revitalizes your mind to embark upon a journey towards a better life; a life with rejuvenated health and vitality, free from diseases and ailments only with Homeopathy. It seeks to enhance the light and life force in each individual. Cultivating dignity and a sense of compassion, it restores a peaceful heart and a vivid sense of purpose.</string>
    <string name="fertcontent">Life is nothing but all about growing your family. It\'s about all the people you\'re attached to emotionally, physically and spiritually. To most of us, family means the love and joy of children. Dreaming of that future joy in your life- your baby, the sound of his laughter, the color of her eyes, those rainbows of emotions on its face... And then the pain of coming to realize that the best of efforts have failed to manifest this dream into reality, you go through heartache of trying to accept infertility as a fact. Hold on, do you really think you should give up..?
</string>
    <string name="fertcontent1">Well, but not really so! We at Dr. Jayesh V.Sanghvi\'s Nature Clinic strongly believe that it\'s definitely not the end of all hope. Rather, we take over just when the best of infertility specialists, and various systems of medicines, the world over give up. Your patience, desire and courage to find the right solution, coupled by our hard and sincere efforts through Homeopathy [and other natural complementary therapies], could result in the ultimate BLESSING...
</string>
    <string name="fertcontent2">The Nature Clinic, housed in world-class ambience, is an epitome of warmth and care, and home to a team of highly experienced fertility care professionals who are passionate about making your dream come true.
</string>
    <string name="ferthead">Our Unique Approach</string>
    <string name="fertcontent3">When we say we have an edge over the other treatments for infertility, we are talking about the difference we boast of in our approach, which is based on Dr. Sanghvi\'s rich experience of more than two decades of treating and curing infertility through Homeopathy, coupled with his understanding of the use of non-invasive complementary therapies like Pranic Healing and Pranayam [yoga], where necessary, to bring about an unmatched cure.
    </string>
    <string name="fertcontent4">Irrespective of whether yours is a case of - chronic infertility, obstructive pathology, of unknown cause or failure from other systems of medicine; our unique approach often comes in as a gentle savior, working subtle miracles by helping fulfillment of your long cherished dream of conceiving and parenting a child.
    </string>
    <string name="fertcontent5">Taking care of both you and your partners comfort levels, our specialized team of doctors at the Nature Clinic will do a thorough, analysis, evaluation and study of - your physical and emotional constitutions, your past history and family history of illnesses and your medical investigation records. This helps them ascertain the appropriate Homeopathic medication and the line of treatment to be adopted [incorporating Pranayam or Pranic Healing where necessary].
    </string>
    <string name="fertcontent6">TTreatment is always given to both the partners simultaneously, irrespective of whether the problem lies with one or both of them, so as to help produce better quality sperms or ovum, leading to a healthier fertilization and conceivement.
    </string>
    <string name="ferthead2">The Duration</string>
    <string name="fertcontent7"> Irrespective of how many years old the fertility is, to achieve results, the treatment of both the partners\' ranges within 18 months, depending on the nature and intensity of the problem.
    </string>
    <string name="ferthead3">The Special Advantages</string>
    <string name="fertlist1"><ul> <li><i>Based on the age old laws of nature, the treatment thus given works to correct your body\'s constitutional imbalance, bringing it to a state of harmony, thereby paving the way for a totally natural conceivement.</i></li></ul></string>
    <string name="fertlist2"><ul> <li><i>A child hence born undoubtedly has a greater chance of being healthier and brighter as compared to the one conceived after heavy drug therapy or other medical procedures.
There is no fear of multi-foetal pregnancy and its resultant risk to the mother or foetus.</i></li></ul></string>
    <string name="fertlist3"><ul> <li><i>The time taken to conceive through the Nature Clinic\'s approach is generally much shorter compared to that of the conventional treatment.</i></li></ul></string>
    <string name="fertlist4"><ul> <li><i>Most of all, our treatment is absolutely safe and natural with no negative impact on the mother or foetus.</i></li></ul></string>
    <string name="fertlist5"><ul> <li><i>It\'s also the most gentle, pleasant, pain free, non-invasive, non-violent and non-habit forming- school of medicine that basically helps the body correct its own imbalances.</i></li></ul></string>
    <string name="fertlist6"><ul> <li><i>There is no fear of multi-foetal pregnancy and its resultant risk to the mother or foetus.</i></li></ul></string>
    <string name="ferthead4">In Conclusion</string>
    <string name="fertcontent8">Please remember, when nature gives you a problem, nature within itself has also given you the answer to that problem. All you need to do is look a little beyond with faith, hope and a sincere desire, and you will find the way...That precisely, we suppose seems to be the reason of why you are here today at Dr.JVS\'s Nature Clinic. Hence forth, transforming to reality, your deepest desires of parenting a child, becomes a passion for our dedicated team of doctors.
</string>
    <string name="fertcontent9">Treatment with us is given a total new meaning by encompassing medication in an atmosphere of warmth and care. Never before has an experience of getting healed, been so soothing and comforting. We work our best to ensure a complete cure by going to the genesis and root of the problem. We sincerely believe and incorporate the very principle laid down by the German, father -founder of Homeopathy, Dr. Samuel Hahnemann the highest ideal of a cure is rapid, gentle and permanent restoration of health...in the shortest, most reliable and most harmless way, on easily comprehensible principles.
</string>
    <string name="ferthead5">What You Should Know About Infertility</string>
    <string name="fertlist7"><ul> <li><i>Infertility is a disease or condition of the reproductive system that impairs one of the body\'s most basic functions: the conception of children, often diagnosed after a couple has one year of unprotected, well-timed intercourse or if the women suffers from multiple miscarriages. It can be male or female related.</i></li></ul></string>
    <string name="fertlist8"><ul> <li><i>Infertility affects approximately 10% of the world\'s population affecting people from all socioeconomic levels, cutting across racial, ethnic and religious lines.</i></li></ul></string>
    <string name="fertlist9"><ul> <li><i>Approx. 35 percentage of infertility\'s due to female factor, 20 percentage due to problems in both parents and 10% from unexplained causes.</i></li></ul></string>
    <string name="fertlist10"><ul> <li><i>Female factors ovulation disorders, endometriosis, tubal disease, fibroids, polyps, polycystic ovaries, sterilization, retroverted uterus, etc.</i></li></ul></string>
    <string name="fertlist11"><ul> <li><i>Male factors absence of sperms azoospermia, low sperm count oligospermia, malformed or poor quality sperms, impotence endocrine disorders etc.</i></li></ul></string>
    <string name="fertlist12"><ul> <li><i>Common male and  female factors: late planning advanced age, excessive alcohol, smoking or drug intake, mistimed intercourse etc.</i></li></ul></string>
    <string name="ferthead6">Ultimately The Process of Conception Depends Upon</string>
    <string name="fertlist13"><ul> <li><i>The production of healthy sperm by the man and healthy eggs by the woman.</i></li></ul></string>
    <string name="fertlist14"><ul> <li><i>Unblocked fallopian tubes that allow the sperm to reach the egg.</i></li></ul></string>
    <string name="fertlist15"><ul> <li><i>The sperm\'s ability to reach the egg.</i></li></ul></string>
    <string name="fertlist16"><ul> <li><i>The sperm\'s ability to fertilize the egg when they meet.</i></li></ul></string>
    <string name="fertlist17"><ul> <li><i>The ability of the fertilized egg (embryo) to become implanted in the woman\'s uterus.</i></li></ul></string>
    <string name="fertlist18"><ul> <li><i>A good quality embryo.</i></li></ul></string>
    <string name="resphead">How the treatment works and its duration</string>
    <string name="resplist1"><ul> <li><i>During an attack of cold, cough or fever, in most cases strong drugs can be avoided and relief is usually quick.</i></li></ul></string>
    <string name="resplist2"><ul> <li><i>A good quality embryo.</i></li></ul></string>
    <string name="resplist3"><ul> <li><i>A good quality embryo.</i></li></ul></string>
    <string name="resphead1">Diseases Treated</string>
    <string name="hhead">Address</string>
    <string name="haddress">20/1, 1st Street, Wallace Garden
Chennai - 600 006</string>
    <string name="hhead1">Email</string>
    <string name="email">info@natureclinic.co.in</string>
    <string name="hhead2">Phone</string>
    <string name="pnumber">04442602020  04442602121  04442602323</string>
    <string name="abtcontent">In practice this means that a drug which is capable of producing a certain set of symptoms in a healthy body when taken in large physiological doses, will relieve or cure a similar set of symptoms in the diseased organism when it is given in small homeopathic doses.
</string>
    <string name="abtcontent1">One common example of the Law of Similars in action is the use of Allium cepa, or Onion, in homeopathic potency, to treat certain kinds of Head Colds. When someone has a cold characterized by red, burning, running eyes, the administration of Allium cepa, which will cause those same symptoms in a person without a cold, can help the body throw off or move beyond the illness i.e cold.
</string>
    <string name="abtcontent2">Since this law finds its roots in Nature, it is also called as “The Nature’s Law of Cure”. Thus it enhances and speeds up the process of recovery. This is achieved because it strengthens the body’s own defense-mechanism and build up the body’s immunity but also maintains a state of harmony between the mind, body and soul!
</string>
    <string name="abtcontent3">It also has the advantage of being devoid of any reaction or adverse effects, isn\’t habit forming and is absolutely safe when given with any system of medicine.
</string>
</resources>