<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

<RelativeLayout
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.windows_home.nature.MainActivity23Activity">

    <TableLayout

        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:stretchColumns="1" >
    <TableRow>
    <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="FERTILITY TREATMENT THERAPY"
        android:gravity="center"
        android:textStyle="bold|italic"
        android:textColor="#FFFF0000"
        android:textSize="15sp"
        android:lines="1"
        />
    </TableRow>


        <TableRow>
            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/fertility1"
                android:layout_margin="-25dp"
                android:cropToPadding="false" />
        </TableRow>
        <TableRow>
        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fertcontent"
            android:lines="12"

            />
        </TableRow>

        <TableRow>
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fertcontent1"
                android:lines="10"
                />
        </TableRow>
        <TableRow>
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fertcontent2"
                android:lines="5"
                />
        </TableRow>

        <TableRow>
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ferthead"
                android:textStyle="bold|italic"
                android:textColor="#FF008000"
                android:textSize="15sp"
                android:lines="2"
                />
        </TableRow>
        <TableRow>
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fertcontent3"
                android:lines="10"
                />
        </TableRow>
        <TableRow>
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fertcontent4"
                android:lines="7"
                />
        </TableRow>
        <TableRow>
            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/f1"
                android:layout_margin="-25dp"
                android:cropToPadding="false" />
        </TableRow>

        <TableRow>
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fertcontent5"
                android:lines="9"
                />
        </TableRow>

        <TableRow>
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fertcontent6"
                android:lines="6"
                />
        </TableRow>
        <TableRow>
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ferthead2"
                android:textStyle="bold|italic"
                android:textColor="#FF008000"
                android:textSize="15sp"
                android:lines="2"
                />
        </TableRow>

        <TableRow>
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fertcontent7"
                android:lines="5"
                />
        </TableRow>



        <TableRow>
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ferthead3"
                android:textStyle="bold|italic"
                android:textColor="#FF008000"
                android:textSize="15sp"
                android:lines="2"
                />
        </TableRow>


        <TableRow>
            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/fertility2"
                android:layout_margin="-25dp"
                android:cropToPadding="false" />
        </TableRow>



        <TableRow>
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fertlist1"
                />
        </TableRow>

        <TableRow>
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fertlist2"
                />
        </TableRow>
        <TableRow>
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fertlist3"
                />
        </TableRow>
        <TableRow>
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fertlist4"
                />
        </TableRow>
        <TableRow>
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fertlist4"
                />
        </TableRow>
        <TableRow>
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fertlist5"
                />
        </TableRow>
        <TableRow>
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fertlist6"
                android:lines="3"
                />
        </TableRow>
        <TableRow>
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ferthead4"
                android:textStyle="bold|italic"
                android:textColor="#FF008000"
                android:textSize="15sp"
                android:lines="2"
                />
        </TableRow>
        <TableRow>
        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fertcontent8"
            android:lines="10">
            </TextView>

        </TableRow>

        <TableRow>
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fertcontent9" android:lines="13"
                ></TextView>
        </TableRow>

        <TableRow>
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ferthead5"
                android:textStyle="bold|italic"
                android:textColor="#FF008000"
                android:textSize="15sp"
                android:lines="2"
                />
        </TableRow>
        <TableRow>
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fertlist7"/>
        </TableRow>

            <TableRow>
                <TextView android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fertlist8"
                    />
            </TableRow>
            <TableRow>
                <TextView android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fertlist9"
                    />
            </TableRow>
            <TableRow>
                <TextView android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fertlist10"
                    />
            </TableRow>
            <TableRow>
                <TextView android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fertlist11"
                    />
            </TableRow>
            <TableRow>
                <TextView android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fertlist12"
                    android:lines="4"
                    />
            </TableRow>
            <TableRow>
                <TextView android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ferthead6"
                    android:textStyle="bold|italic"
                    android:textColor="#FF008000"
                    android:textSize="15sp"
                    android:lines="2"
                    />
            </TableRow>
            <TableRow>
                <TextView android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fertlist13"
                    />
            </TableRow>
            <TableRow>
                <TextView android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fertlist14"
                    />
            </TableRow>
            <TableRow>
                <TextView android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fertlist15"
                    />
            </TableRow>
            <TableRow>
                <TextView android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fertlist16"
                    />
            </TableRow>
            <TableRow>
                <TextView android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fertlist17"
                    />
            </TableRow>
            <TableRow>
                <TextView android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fertlist18"
                    />
            </TableRow>


    </TableLayout>
    </RelativeLayout>
    </ScrollView>