<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.windows_home.nature.MainActivity24Activity">

    <TableLayout

        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:stretchColumns="1" >
        <TableRow>
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="RESPIRATORY WELLNESS"
                android:gravity="center"
                android:textStyle="bold|italic"
                android:textColor="#FFFF0000"
                android:textSize="15sp"
                android:lines="1"
                />
        </TableRow>
        <TableRow>
            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/resp3"
                android:layout_margin="10dp"
                android:cropToPadding="false" />
        </TableRow>

        <TableRow>
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fertcontent"
                android:lines="12"


                />
        </TableRow>
        <TableRow>
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fertcontent1"
                android:lines="10"


                />
        </TableRow>
        <TableRow>
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fertcontent2"
                android:lines="5"


                />
        </TableRow>

        <TableRow>
            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/resp1"
                android:layout_margin="10dp"
                android:cropToPadding="false" />
        </TableRow>



        <TableRow>
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resphead"
                android:textStyle="bold|italic"
                android:textColor="#FF008000"
                android:textSize="15sp"
                android:lines="2"
                />
        </TableRow>

        <TableRow>
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resplist1"
                />
        </TableRow>
        <TableRow>
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resplist2"
                />
        </TableRow>
        <TableRow>
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resplist3"
                android:lines="2"
                />
        </TableRow>

        <TableRow>
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resphead1"
                android:textStyle="bold|italic"
                android:textColor="#FF008000"
                android:textSize="15sp"
                android:lines="2"
                />
        </TableRow>

        <TableRow>
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fertcontent3"


                />
        </TableRow>














</TableLayout>
</RelativeLayout>
    </ScrollView>
