<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >


    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="com.example.windows_home.nature.MainActivity24Activity">

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:stretchColumns="1" >
    <TableRow>
        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="CONTACT US"
            android:gravity="center"
            android:textStyle="bold|italic"
            android:textColor="#FFFF0000"
            android:textSize="20sp"
            android:lines="2"
            />
    </TableRow>
        <TableRow>
            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/contactus"
                android:layout_margin="10dp"
                android:cropToPadding="false" />
        </TableRow>
        <TableRow>
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hhead"
                android:textStyle="bold|italic"
                android:textColor="#FF008000"
                android:textSize="15sp"
                android:lines="2"
                />
        </TableRow>

        <TableRow>
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/haddress"
                android:lines="2"
                />
        </TableRow>


        <TableRow>
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hhead1"
                android:textStyle="bold|italic"
                android:textColor="#FF008000"
                android:textSize="15sp"
                android:lines="2"

                />
        </TableRow>

        <TableRow>
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:lines="2"
                android:autoLink="email"
                />
        </TableRow>

    <TableRow>
        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hhead2"
            android:textStyle="bold|italic"
            android:textColor="#FF008000"
            android:textSize="15sp"
            android:lines="2"
            />
    </TableRow>

    <TableRow>
        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pnumber"
            android:autoLink="phone"
            />
    </TableRow>
</TableLayout>
</RelativeLayout>
    </ScrollView>