<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <RelativeLayout
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="com.example.windows_home.nature.MainActivity23Activity">

        <TableLayout

            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:stretchColumns="1" >
            <TableRow>
                <TextView android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="The Law States - Like cures like"
                    android:textStyle="bold|italic"
                    android:textColor="#FFFF0000"
                    android:textSize="15sp"
                    android:lines="1"
                    />
            </TableRow>
            <TableRow>
                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/hhh1"
                    android:layout_margin="10dp"
                    android:cropToPadding="false" />
            </TableRow>


            <TableRow>
                <TextView android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/abtcontent"
                    android:lines="6"
                      />
            </TableRow>

            <TableRow>
                <TextView android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/abtcontent1"
                    android:lines="8"
                    />
            </TableRow>
            <TableRow>
                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/hhh2"
                    android:layout_margin="10dp"
                    android:cropToPadding="false" />
            </TableRow>
            <TableRow>
                <TextView android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/abtcontent2"
                    android:lines="8"
                    />
            </TableRow>

            <TableRow>
                <TextView android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/abtcontent3"
                    />
            </TableRow>


        </TableLayout>
    </RelativeLayout>
</ScrollView>